adding disclaimer and making moon a little responsive

--- a/index.html
+++ b/index.html
@@ -1,110 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Moon Night | Parallax Scrolling Effect | Vanilla JavaScript</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <section>
-        <img src="assets/bg.jpg" alt="" id="bg">
-        <img src="assets/moon.png" alt="" id="moon">
-        <img src="assets/mountain.png" alt="" id="mountain">
-        <img src="assets/road.png" alt="" id="road">
-        <h2 id="text">Moon Light</h2>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="disclaimer">
+      <h1>Use bigger screen or Desktop to see Parallax Scrolling Effects</h1>
+    </div>
+    <section class="main">
+      <img src="assets/bg.jpg" alt="" id="bg" />
+      <img src="assets/moon.png" alt="" id="moon" />
+      <img src="assets/mountain.png" alt="" id="mountain" />
+      <img src="assets/road.png" alt="" id="road" />
+      <h2 id="text">Moon Light</h2>
     </section>
     <div class="container" id="sec">
-        <h2>Parallax Scrolling Effects</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea perspiciatis
-          nesciunt architecto magni eaque modi vel possimus atque impedit alias,
-          iusto, molestiae distinctio. Mollitia blanditiis iusto similique porro
-          at illo sunt error cumque quidem velit, placeat voluptate reprehenderit
-          commodi cupiditate architecto reiciendis enim consequuntur. Eos eum
-          pariatur consectetur distinctio reiciendis qui fuga. Eos repudiandae
-          delectus quos enim fuga, provident, rerum laborum similique fugiat illum
-          nam qui quam accusamus praesentium eum omnis. Ipsa dolore sit nam qui
-          obcaecati eius rem suscipit magnam, quidem eum cum quis, rerum provident
-          exercitationem veniam, veritatis cupiditate nemo. Quibusdam, tempora?
-          Rerum deleniti impedit quos aperiam? Rem?
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi unde,
-          maxime corporis assumenda error incidunt. Eos rem consectetur cupiditate
-          est. Omnis, inventore possimus aliquam odio optio recusandae esse eius
-          sapiente et eaque minima commodi! Distinctio repellat, cumque facilis
-          aut nesciunt impedit iste veniam odit? Quisquam incidunt magni aperiam
-          autem quibusdam amet, laborum assumenda. Mollitia provident eum optio
-          debitis suscipit aliquid quasi magnam saepe expedita quaerat itaque,
-          dolore eaque nihil voluptates voluptatem molestias doloribus labore
-          cumque.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea perspiciatis
-          nesciunt architecto magni eaque modi vel possimus atque impedit alias,
-          iusto, molestiae distinctio. Mollitia blanditiis iusto similique porro
-          at illo sunt error cumque quidem velit, placeat voluptate reprehenderit
-          commodi cupiditate architecto reiciendis enim consequuntur. Eos eum
-          pariatur consectetur distinctio reiciendis qui fuga. Eos repudiandae
-          delectus quos enim fuga, provident, rerum laborum similique fugiat illum
-          nam qui quam accusamus praesentium eum omnis. Ipsa dolore sit nam qui
-          obcaecati eius rem suscipit magnam, quidem eum cum quis, rerum provident
-          exercitationem veniam, veritatis cupiditate nemo. Quibusdam, tempora?
-          Rerum deleniti impedit quos aperiam? Rem?
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi unde,
-          maxime corporis assumenda error incidunt. Eos rem consectetur cupiditate
-          est. Omnis, inventore possimus aliquam odio optio recusandae esse eius
-          sapiente et eaque minima commodi! Distinctio repellat, cumque facilis
-          aut nesciunt impedit iste veniam odit? Quisquam incidunt magni aperiam
-          autem quibusdam amet, laborum assumenda. Mollitia provident eum optio
-          debitis suscipit aliquid quasi magnam saepe expedita quaerat itaque,
-          dolore eaque nihil voluptates voluptatem molestias doloribus labore
-          cumque.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea perspiciatis
-          nesciunt architecto magni eaque modi vel possimus atque impedit alias,
-          iusto, molestiae distinctio. Mollitia blanditiis iusto similique porro
-          at illo sunt error cumque quidem velit, placeat voluptate reprehenderit
-          commodi cupiditate architecto reiciendis enim consequuntur. Eos eum
-          pariatur consectetur distinctio reiciendis qui fuga. Eos repudiandae
-          delectus quos enim fuga, provident, rerum laborum similique fugiat illum
-          nam qui quam accusamus praesentium eum omnis. Ipsa dolore sit nam qui
-          obcaecati eius rem suscipit magnam, quidem eum cum quis, rerum provident
-          exercitationem veniam, veritatis cupiditate nemo. Quibusdam, tempora?
-          Rerum deleniti impedit quos aperiam? Rem?
-        </p>
-      </div>
+      <h2>Parallax Scrolling Effects</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea perspiciatis
+        nesciunt architecto magni eaque modi vel possimus atque impedit alias,
+        iusto, molestiae distinctio. Mollitia blanditiis iusto similique porro
+        at illo sunt error cumque quidem velit, placeat voluptate reprehenderit
+        commodi cupiditate architecto reiciendis enim consequuntur. Eos eum
+        pariatur consectetur distinctio reiciendis qui fuga. Eos repudiandae
+        delectus quos enim fuga, provident, rerum laborum similique fugiat illum
+        nam qui quam accusamus praesentium eum omnis. Ipsa dolore sit nam qui
+        obcaecati eius rem suscipit magnam, quidem eum cum quis, rerum provident
+        exercitationem veniam, veritatis cupiditate nemo. Quibusdam, tempora?
+        Rerum deleniti impedit quos aperiam? Rem?
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi unde,
+        maxime corporis assumenda error incidunt. Eos rem consectetur cupiditate
+        est. Omnis, inventore possimus aliquam odio optio recusandae esse eius
+        sapiente et eaque minima commodi! Distinctio repellat, cumque facilis
+        aut nesciunt impedit iste veniam odit? Quisquam incidunt magni aperiam
+        autem quibusdam amet, laborum assumenda. Mollitia provident eum optio
+        debitis suscipit aliquid quasi magnam saepe expedita quaerat itaque,
+        dolore eaque nihil voluptates voluptatem molestias doloribus labore
+        cumque.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea perspiciatis
+        nesciunt architecto magni eaque modi vel possimus atque impedit alias,
+        iusto, molestiae distinctio. Mollitia blanditiis iusto similique porro
+        at illo sunt error cumque quidem velit, placeat voluptate reprehenderit
+        commodi cupiditate architecto reiciendis enim consequuntur. Eos eum
+        pariatur consectetur distinctio reiciendis qui fuga. Eos repudiandae
+        delectus quos enim fuga, provident, rerum laborum similique fugiat illum
+        nam qui quam accusamus praesentium eum omnis. Ipsa dolore sit nam qui
+        obcaecati eius rem suscipit magnam, quidem eum cum quis, rerum provident
+        exercitationem veniam, veritatis cupiditate nemo. Quibusdam, tempora?
+        Rerum deleniti impedit quos aperiam? Rem?
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi unde,
+        maxime corporis assumenda error incidunt. Eos rem consectetur cupiditate
+        est. Omnis, inventore possimus aliquam odio optio recusandae esse eius
+        sapiente et eaque minima commodi! Distinctio repellat, cumque facilis
+        aut nesciunt impedit iste veniam odit? Quisquam incidunt magni aperiam
+        autem quibusdam amet, laborum assumenda. Mollitia provident eum optio
+        debitis suscipit aliquid quasi magnam saepe expedita quaerat itaque,
+        dolore eaque nihil voluptates voluptatem molestias doloribus labore
+        cumque.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea perspiciatis
+        nesciunt architecto magni eaque modi vel possimus atque impedit alias,
+        iusto, molestiae distinctio. Mollitia blanditiis iusto similique porro
+        at illo sunt error cumque quidem velit, placeat voluptate reprehenderit
+        commodi cupiditate architecto reiciendis enim consequuntur. Eos eum
+        pariatur consectetur distinctio reiciendis qui fuga. Eos repudiandae
+        delectus quos enim fuga, provident, rerum laborum similique fugiat illum
+        nam qui quam accusamus praesentium eum omnis. Ipsa dolore sit nam qui
+        obcaecati eius rem suscipit magnam, quidem eum cum quis, rerum provident
+        exercitationem veniam, veritatis cupiditate nemo. Quibusdam, tempora?
+        Rerum deleniti impedit quos aperiam? Rem?
+      </p>
+    </div>
     <script>
-        const bg = document.getElementById('bg');
-        const moon = document.getElementById('moon');
-        const mountain = document.getElementById('mountain');
-        const road = document.getElementById('road');
-        const text = document.getElementById('text');
+      const bg = document.getElementById("bg");
+      const moon = document.getElementById("moon");
+      const mountain = document.getElementById("mountain");
+      const road = document.getElementById("road");
+      const text = document.getElementById("text");
 
-        window.addEventListener('scroll', function() {
-            let scrollY = window.pageYOffset;
+      window.addEventListener("scroll", function () {
+        let scrollY = window.pageYOffset;
 
-            requestAnimationFrame(()=>{
-                bg.style.transform = `rotate(${scrollY / 50}deg)`;
-            })
-            requestAnimationFrame(()=>{
-                moon.style.left = -scrollY*.5 + 'px';
-            })
-            requestAnimationFrame(()=>{
-                mountain.style.top = -scrollY*.15 + 'px';
-            })
-            requestAnimationFrame(()=>{
-                road.style.top = scrollY*.15 + 'px';
-            })
-            requestAnimationFrame(()=>{
-                text.style.top = scrollY + 'px';
-            })
-        })
+        requestAnimationFrame(() => {
+          bg.style.transform = `rotate(${scrollY / 50}deg)`;
+        });
+        requestAnimationFrame(() => {
+          moon.style.left = -scrollY * 0.5 + "px";
+        });
+        requestAnimationFrame(() => {
+          mountain.style.top = -scrollY * 0.15 + "px";
+        });
+        requestAnimationFrame(() => {
+          road.style.top = scrollY * 0.15 + "px";
+        });
+        requestAnimationFrame(() => {
+          text.style.top = scrollY + "px";
+        });
+      });
     </script>
-</body>
+  </body>
 </html>
